; ModuleID = '/home/carl/AnghaBench/git/extr_credential-cache--daemon.c_init_socket_directory.c'
source_filename = "/home/carl/AnghaBench/git/extr_credential-cache--daemon.c_init_socket_directory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i32 }

@permissions_advice = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"unable to create directories for '%s'\00", align 1
@.str.1 = private unnamed_addr constant [21 x i8] c"unable to mkdir '%s'\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @init_socket_directory to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_socket_directory(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.stat, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = call i8* @xstrdup(i8* %6)
  store i8* %7, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i8* @dirname(i8* %8)
  store i8* %9, i8** %5, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @stat(i8* %10, %struct.stat* %3)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %24, label %13

13:                                               ; preds = %1
  %14 = getelementptr inbounds %struct.stat, %struct.stat* %3, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = and i32 %15, 63
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %23

18:                                               ; preds = %13
  %19 = load i32, i32* @permissions_advice, align 4
  %20 = call i32 @_(i32 %19)
  %21 = load i8*, i8** %5, align 8
  %22 = call i32 @die(i32 %20, i8* %21)
  br label %23

23:                                               ; preds = %18, %13
  br label %39

24:                                               ; preds = %1
  %25 = load i8*, i8** %5, align 8
  %26 = call i64 @safe_create_leading_directories_const(i8* %25)
  %27 = icmp slt i64 %26, 0
  br i1 %27, label %28, label %31

28:                                               ; preds = %24
  %29 = load i8*, i8** %5, align 8
  %30 = call i32 @die_errno(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), i8* %29)
  br label %31

31:                                               ; preds = %28, %24
  %32 = load i8*, i8** %5, align 8
  %33 = call i64 @mkdir(i8* %32, i32 448)
  %34 = icmp slt i64 %33, 0
  br i1 %34, label %35, label %38

35:                                               ; preds = %31
  %36 = load i8*, i8** %5, align 8
  %37 = call i32 @die_errno(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0), i8* %36)
  br label %38

38:                                               ; preds = %35, %31
  br label %39

39:                                               ; preds = %38, %23
  %40 = load i8*, i8** %5, align 8
  %41 = call i64 @chdir(i8* %40)
  %42 = icmp ne i64 %41, 0
  br i1 %42, label %43, label %44

43:                                               ; preds = %39
  br label %44

44:                                               ; preds = %43, %39
  %45 = load i8*, i8** %4, align 8
  %46 = call i32 @free(i8* %45)
  ret void
}

declare dso_local i8* @xstrdup(i8*) #1

declare dso_local i8* @dirname(i8*) #1

declare dso_local i32 @stat(i8*, %struct.stat*) #1

declare dso_local i32 @die(i32, i8*) #1

declare dso_local i32 @_(i32) #1

declare dso_local i64 @safe_create_leading_directories_const(i8*) #1

declare dso_local i32 @die_errno(i8*, i8*) #1

declare dso_local i64 @mkdir(i8*, i32) #1

declare dso_local i64 @chdir(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
